// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SFC analyze <script> bindings auto name inference basic 1`] = `
"const a = 1
export default defineComponent({
  __name: 'FooBar',
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

return (): any | null => {

  return toDisplayString(a)
}
}

})"
`;

exports[`SFC analyze <script> bindings auto name inference do not overwrite manual name (call) 1`] = `
"import { defineComponent } from 'vue'
        const __default__ = defineComponent({
          name: 'Baz'
        })
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;
const a = 1
return (): any | null => {

  return toDisplayString(a)
}
}

})"
`;

exports[`SFC analyze <script> bindings auto name inference do not overwrite manual name (object) 1`] = `
"const __default__ = {
          name: 'Baz'
        }
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;
const a = 1
return (): any | null => {

  return toDisplayString(a)
}
}

})"
`;

exports[`SFC analyze <script> bindings defineSlots basic 1`] = `
"export default defineComponent({
  __name: 'FooBar',
  slots: Object as SlotsType<{default: { times: number; name: string }}>,
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;


        
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> binding analysis for destructure 1`] = `
"export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

      const { foo, b: bar, ['x' + 'y']: baz, x: { y, zz: { z }}} = {}
      
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> dev mode import usage check TS annotations 1`] = `
"import { Foo, Bar, Baz, Qux, Fred } from './x'
        const a = 1
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        function b() {}
        
return (): any | null => {

const _component_Comp = resolveComponent("Comp")

  return createElementVNode(Fragment, null, [
    toDisplayString(a as Foo) + " " + toDisplayString(b<Bar>()) + " " + toDisplayString(unref(Baz)) + " ",
    createVNode(_component_Comp, null, utsMapOf({
      default: withScopedSlotCtx(({ data }: Qux): any[] => [toDisplayString(data)]),
      _: 1 /* STABLE */
    })),
    createElementVNode(Fragment, null, RenderHelpers.renderList(_ctx.list as Fred, ({ z = _ctx.x as Qux }, __key, __index, _cached): any => {
      return createElementVNode("view")
    }), 256 /* UNKEYED_FRAGMENT */)
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> dev mode import usage check attribute expressions 1`] = `
"import { bar, baz } from './x'
        const cond = true
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => {

  return createElementVNode("view", utsMapOf({
    class: normalizeClass([cond ? '' : unref(bar)(), 'default']),
    style: normalizeStyle(unref(baz))
  }), null, 6 /* CLASS, STYLE */)
}
}

})"
`;

exports[`SFC compile <script setup> dev mode import usage check components 1`] = `
"import { FooBar, FooBaz, FooQux, foo } from './x'
        const fooBar: FooBar = 1
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => {

  return createElementVNode(Fragment, null, [
    createVNode(unref(FooBaz)),
    createVNode(unref(FooQux)),
    createVNode(unref(foo)),
    " FooBar "
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> dev mode import usage check directive 1`] = `
"import { vMyDir } from './x'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => {

  return withDirectives(createElementVNode("view", null, null, 512 /* NEED_PATCH */), [
    [unref(vMyDir)]
  ])
}
}

})"
`;

exports[`SFC compile <script setup> dev mode import usage check dynamic arguments 1`] = `
"import { FooBar, foo, bar, unused, baz } from './x'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => {

  return createElementVNode(Fragment, null, [
    createVNode(unref(FooBar)),
    createVNode(unref(FooBar)),
    createElementVNode("view", normalizeProps(utsMapOf({ [(unref(bar).attrName) || ""]: 15 })), null, 16 /* FULL_PROPS */),
    createElementVNode("view", utsMapOf({ unused: "unused" })),
    createVNode(unref(FooBar))
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> dev mode import usage check js template string interpolations 1`] = `
"import { VAR, VAR2, VAR3 } from './x'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => {

  return toDisplayString(\`\${unref(VAR)}VAR2\${unref(VAR3)}\`)
}
}

})"
`;

exports[`SFC compile <script setup> dev mode import usage check last tag 1`] = `
"import { FooBaz, Last } from './x'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => {

  return createElementVNode(Fragment, null, [
    createVNode(unref(FooBaz)),
    createVNode(unref(Last))
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> dev mode import usage check template ref 1`] = `
"import { foo, bar, Baz } from './foo'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

          
return (): any | null => {

  return createElementVNode(Fragment, null, [
    createElementVNode("view", utsMapOf({
      ref_key: "foo",
      ref: foo
    }), null, 512 /* NEED_PATCH */),
    createElementVNode("view", utsMapOf({ ref: "" }), null, 512 /* NEED_PATCH */),
    createVNode(unref(Baz), utsMapOf({
      ref_key: "bar",
      ref: bar
    }), null, 512 /* NEED_PATCH */)
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> dev mode import usage check vue interpolations 1`] = `
"import { x, y, z, x$y } from './x'
      
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

      
return (): any | null => {

  return createElementVNode("view", utsMapOf({
    id: unref(z) + 'y'
  }), toDisplayString(unref(x)) + " " + toDisplayString(_ctx.yy) + " " + toDisplayString(unref(x$y)), 9 /* TEXT, PROPS */, ["id"])
}
}

})"
`;

exports[`SFC compile <script setup> errors should allow defineProps/Emit() referencing imported binding 1`] = `
"import { bar } from './bar'
        
export default defineComponent({
  props: {
          foo: {
            default: () => bar
          }
        },
  emits: {
          foo: () => bar > 1
        },
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
        
        
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> errors should allow defineProps/Emit() referencing scope var 1`] = `
"const bar = 1
          
export default defineComponent({
  props: {
            foo: {
              default: bar => bar + 1
            }
          },
  emits: {
            foo: bar => bar > 1
          },
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

          
          
        
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> imports dedupe between user & helper 1`] = `
"import { ref } from 'vue'
      
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

      let foo = $ref(1)
      
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> imports import dedupe between <script> and <script setup> 1`] = `
"import { x } from './x'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        x()
        
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> imports should allow defineProps/Emit at the start of imports 1`] = `
"import { ref } from 'vue'
      
export default defineComponent({
  props: ['foo'],
  emits: ['bar'],
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

      
      
      const r = ref(0)
      
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> imports should extract comment for import or type declarations 1`] = `
"import a from 'a' // comment
        import b from 'b'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> imports should hoist and expose imports 1`] = `
"import { ref } from 'vue'
          import 'foo/css'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

          
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> imports should support module string names syntax 1`] = `
"import { "😏" as foo } from './foo'
      
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> inlineTemplate mode avoid unref() when necessary 1`] = `
"import { ref } from 'vue'
        import Foo, { bar } from './Foo.vue'
        import other from './util'
        import * as tree from './tree'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        const count = ref(0)
        const constant = {}
        const maybe = foo()
        let lett = 1
        function fn() {}
        
return (): any | null => {

  return createElementVNode(Fragment, null, [
    createVNode(Foo, null, utsMapOf({
      default: withSlotCtx((): any[] => [toDisplayString(unref(bar))]),
      _: 1 /* STABLE */
    })),
    createElementVNode("view", utsMapOf({ onClick: fn }), toDisplayString(count.value) + " " + toDisplayString(constant) + " " + toDisplayString(unref(maybe)) + " " + toDisplayString(unref(lett)) + " " + toDisplayString(unref(other)), 1 /* TEXT */),
    " " + toDisplayString(tree.foo())
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> inlineTemplate mode referencing scope components and directives 1`] = `
"import ChildComp from './Child.vue'
        import SomeOtherComp from './Other.vue'
        import vMyDir from './my-dir'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => {

  return createElementVNode(Fragment, null, [
    withDirectives(createElementVNode("view", null, null, 512 /* NEED_PATCH */), [
      [unref(vMyDir)]
    ]),
    createVNode(ChildComp),
    createVNode(SomeOtherComp)
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> inlineTemplate mode should work 1`] = `
"import { ref } from 'vue'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        const count = ref(0)
        
return (): any | null => {

  return createElementVNode(Fragment, null, [
    createElementVNode("view", null, toDisplayString(count.value), 1 /* TEXT */),
    createElementVNode("view", null, "static")
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> inlineTemplate mode template assignment expression codegen 1`] = `
"import { ref } from 'vue'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        const count = ref(0)
        const maybe = foo()
        let lett = 1
        let v = ref(1)
        
return (): any | null => {

  return createElementVNode(Fragment, null, [
    createElementVNode("view", utsMapOf({
      onClick: () => {count.value = 1}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {maybe.value = count.value}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {isRef(lett) ? trySetRefValue(lett, count.value) : lett = count.value}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {isRef(v) ? trySetRefValue(v, unref(v.also((_)=>{ v += 1 }))) : v += 1}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {isRef(v) ? trySetRefValue(v, unref(v.also((_)=>{ v -= 1 }))) : v -= 1}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {
              let a = '' + unref(lett)
              isRef(v) ? trySetRefValue(v, a) : v = a
           }
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {
              // nested scopes
              (()=>{
                let x = _ctx.a
                (()=>{
                  let z = x
                  let z2 = z
                })
                let lz = _ctx.z
              })
              isRef(v) ? trySetRefValue(v, _ctx.a) : v = _ctx.a
           }
    }), null, 8 /* PROPS */, ["onClick"])
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> inlineTemplate mode template destructure assignment codegen 1`] = `
"import { ref } from 'vue'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        const val = {}
        const count = ref(0)
        const maybe = foo()
        let lett = 1
        
return (): any | null => {

  return createElementVNode(Fragment, null, [
    createElementVNode("view", utsMapOf({
      onClick: () => {({ count: count.value } = val)}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {[maybe.value] = val}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {({ lett: lett } = val)}
    }), null, 8 /* PROPS */, ["onClick"])
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> inlineTemplate mode template update expression codegen 1`] = `
"import { ref } from 'vue'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        const count = ref(0)
        const maybe = foo()
        let lett = 1
        
return (): any | null => {

  return createElementVNode(Fragment, null, [
    createElementVNode("view", utsMapOf({
      onClick: () => {count.value++}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {--count.value}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {maybe.value++}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {--maybe.value}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {lett = tryUpdateRefNumber(lett, 1, false)}
    }), null, 8 /* PROPS */, ["onClick"]),
    createElementVNode("view", utsMapOf({
      onClick: () => {lett = tryUpdateRefNumber(lett, -1, true)}
    }), null, 8 /* PROPS */, ["onClick"])
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> inlineTemplate mode v-model codegen 1`] = `
"import { ref } from 'vue'
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        const count = ref(0)
        const maybe = foo()
        let lett = 1
        
return (): any | null => {

  return createElementVNode(Fragment, null, [
    createElementVNode("input", utsMapOf({
      modelValue: count.value,
      onInput: ($event: InputEvent) => {(count).value = $event.detail.value}
    }), null, 40 /* PROPS, NEED_HYDRATION */, ["modelValue", "onInput"]),
    createElementVNode("input", utsMapOf({
      modelValue: unref(maybe),
      onInput: ($event: InputEvent) => {trySetRefValue(maybe, $event.detail.value)}
    }), null, 40 /* PROPS, NEED_HYDRATION */, ["modelValue"]),
    createElementVNode("input", utsMapOf({
      modelValue: unref(lett),
      onInput: ($event: InputEvent) => {lett = trySetRefValue(lett, $event.detail.value)}
    }), null, 40 /* PROPS, NEED_HYDRATION */, ["modelValue"])
  ], 64 /* STABLE_FRAGMENT */)
}
}

})"
`;

exports[`SFC compile <script setup> inlineTemplate mode with defineExpose() 1`] = `
"export default defineComponent({
  setup(__props, { expose: __expose }: SetupContext): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        const count = ref(0)
        __expose({ count })
        
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> should compile JS syntax 1`] = `
"const a = 1
      const b = 2
      
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

      
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> should expose top level declarations 1`] = `
"import { x } from './x'
      
      import { xx } from './x'
      let aa = 1
      const bb = 2
      function cc() {}
      class dd {}
      

export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

      let a = 1
      const b = 2
      function c() {}
      class d {}
      
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> with TypeScript const Enum 1`] = `
"const enum Foo { A = 123 }
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> with TypeScript hoist type declarations 1`] = `
"export interface Foo {}
        type Bar = {}
      
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> with TypeScript runtime Enum 1`] = `
"enum Foo { A = 123 }
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        
return (): any | null => { return null }
}

})"
`;

exports[`SFC compile <script setup> with TypeScript runtime Enum in normal script 1`] = `
"export enum D { D = "D" }
          const enum C { C = "C" }
          enum B { B = "B" }
        
export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

        enum Foo { A = 123 }
        
return (): any | null => { return null }
}

})"
`;

exports[`SFC genDefaultAs <script setup> only 1`] = `
"const a = 1
      
const __sfc__ = defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

      
return (): any | null => { return null }
}

})
export default __sfc__"
`;

exports[`SFC genDefaultAs <script setup> only w/ ts 1`] = `
"const a = 1
      
const __sfc__ = defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

      
return (): any | null => { return null }
}

})
export default __sfc__"
`;

exports[`SFC genDefaultAs normal <script> only 1`] = `
"
      const __sfc__ = defineComponent({})
      
export default __sfc__"
`;

exports[`SFC genDefaultAs normal <script> w/ cssVars 1`] = `
"
      const __sfc__ = defineComponent({})
      
export default __sfc__"
`;
